updating my details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a single mom of two boys navaigating being the sole provider. I currently work at an entry-level job and want to start a career.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I grew up in the Riverton/Herriman part of Salt Lake County.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love photography, going to concerts, watching TV (The Office is a favorite), listening to podcasts, and hiking. I also really love making lists.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'd die happy if I was a successful photographer, but I gotta pay the bills, so being a web developer is my responsible choice.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Vineyard, Utah.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've dabbled a little with HTML (and SQL!), and I really enjoyed the creative aspect of what I did with coding. I like being able to create things, and I've always wanted to learn how to code.</p>
     </section>
 
     <footer id="footer">
